OCMUI-3829: fix horizontal container-overflows (#415)

--- a/src/components/clusters/common/Upgrades/UpgradeWizard/UpgradeWizard.scss
+++ b/src/components/clusters/common/Upgrades/UpgradeWizard/UpgradeWizard.scss
@@ -69,8 +69,3 @@
     }
   }
 }
-
-
-.ocm-upgrade-wizard__modal{
-  min-height: 400px;
-}
